--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bookclub-api",
   "version": "1.0.0",
   "description": "Welcome to my Book Club API Project repository! This project was born from the need of a book club to democratize reading through the donation of already read books. They wanted a way for people beyond the club members to participate in donations and also borrow books. For this purpose, I created an API that allows user registration and authentication, and provides the capability to the user add new books, consult all existing books in the database, borrow books, and see a list of books they've borrowed.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/luccaviccini/BookClub-api#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
